fixing font sizesocial icon modal on mobile

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -19,6 +19,10 @@ h2 {
   font-weight: 800;
 }
 
+small {
+  line-height: 1;
+}
+
 @media screen and (min-width: 480px) {
   html {
     font-size: 16px;
